# ai-delver-level

./: MANIFEST.in  pyproject.toml
level/: __init__.py  config.json  config.py  level.py  level_selector.py  level_toggler.py  serialization.py
level/canvas_object/: __init__.py  canvas_object.py  canvas_objects_manager.py
level/grid_map/: __init__.py  mixed_map.py
level/grid_map/editor_tilemap/: __init__.py  editor_tilemap.py  floor_variations.json  shallow_platforms_variations.json
level/grid_map/editor_tilemap/editor_tilemap_layer/: __init__.py  editor_tilemap_layer.py
level/grid_map/world_objects_map/: __init__.py  world_objects_map.py
level/grid_map/world_objects_map/world_object/: __init__.py  world_object_representation.py
level/grid_map/world_objects_map/world_objects_layer/: __init__.py  world_objects_layer.py
level/level_bootstrap/: _level_factory.py  level_loader.py
level/level_loader/: __init__.py  _canvas_objects_factory.py  _level_factory.py  level_loader.py
level/utils/: __init__.py  from_asset_relative_path.py  to_asset_relative_path.py
